# ai_for_bharat_teamfriday

./: .gitignore  README.md  pyproject.toml
.kiro/specs/personal-health-ai-tracker/: design.md  requirements.md  tasks.md
phait/: __init__.py  config.py
phait/ai/: __init__.py
phait/application/: __init__.py
phait/security/: __init__.py
phait/storage/: __init__.py
phait/ui/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py
tests/unit/ai/: __init__.py
tests/unit/security/: __init__.py
tests/unit/storage/: __init__.py
